tests/ui/recursion/issue-23302-1.stderr
error[E0391]: cycle detected when simplifying constant for the type system `X::A::{constant#0}`
  --> $DIR/issue-23302-1.rs:4:9
   |
LL |     A = X::A as isize,
   |         ^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `X::A::{constant#0}`...
  --> $DIR/issue-23302-1.rs:4:9
   |
LL |     A = X::A as isize,
   |         ^^^^^^^^^^^^^
   = note: ...which again requires simplifying constant for the type system `X::A::{constant#0}`, completing the cycle
note: cycle used when checking that `X` is well-formed
  --> $DIR/issue-23302-1.rs:3:1
   |
LL | enum X {
   | ^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
